# CalcOS

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Config.toml  Dockerfile  LICENSE  README.md  SECURITY.md  task.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Application/Input/: Lexer.c  Lexer.h  Parser.c  Parser.h  Tokenizer.c  Tokenizer.h
Application/Input/Experimental/: ShuntingYard.c  ShuntingYard.h
Application/Interface/: CommandLine.c  CommandLine.h  Framebuffer.c  Framebuffer.h  MathSymbols.c  MathSymbols.h  SerialIO.c  SerialIO.h  VESAFramebuffer.c  VESAFramebuffer.h  VESAFramebufferDriver.c
Application/Interface/Plotter/: Plotter.c  Plotter.h
Application/Output/: Formatter.c  Formatter.h  PrintFloat.c  PrintFloat.h  PrintInt.c  PrintInt.h
Application/UI/: ui_core.c  ui_core.h
Bootloader/Boot/: BootConfig.h  BootEntry.asm  BootError.c  BootLogger.c
Bootloader/Bootstrapper/: EarlyInit.c  LateInit.c
Bootloader/Loader/: A20Gate.c  KernelLoader.c  MemoryMapper.c  SegmentSetup.c
Docs/: Architecture.md  BuildTargets.md  DataOrientedDesign.md  ESP32Build.md  FAQ.md  MemoryMap.md  ParserReference.md  Performance.md  PluginExamples.md  PluginGuide.md  QEMUGuide.md  Retro.md  SIMD.md  StatisticsReference.md  WASMBuild.md
DotNetPerf/: Program.cs
Infrastructure/Config/: ConfigDefaults.h  ConfigParser.c  ConfigParser.h
Infrastructure/Logging/: LogLevel.h  Logger.c  Logger.h
Infrastructure/Platform/RaspberryPi/: FrameBufferPi.c  Mailbox.c  Mailbox.h  linker.ld  start.S
Infrastructure/Platform/Retro1990/: BootEntry1990.asm  x87FPU.c  x87FPU.h
Infrastructure/Utils/: MathUtils.h  MemoryUtils.c  MemoryUtils.h
Kernel/: Kernel.c  Kernel.h
Kernel/API/: ConfigAPI.h  DisplayAPI.h  FormatterAPI.h  HistoryAPI.h  InputAPI.h  LoggerAPI.h  ParserAPI.h  ProfilerAPI.h  StackAPI.h
Kernel/Adapters/: ConfigAdapter.c  DisplayAdapter.c  DisplayAdapter.h  FormatterAdapter.c  HistoryAdapter.c  InputAdapter.c  InputAdapter.h  LoggerAdapter.c  ParserAdapter.c  StackAdapter.c
Kernel/Core/CPU/: CPUFeatureLog.h  CPUID.c  CPUID.h
Kernel/Core/IDT/: exceptions.asm  idt.c
Kernel/Core/Profiler/: CalcProfiler.c  CalcProfiler.h
Kernel/Operations/Arithmetic/: Addition.c  Addition.h  Division.c  Division.h  Multiplication.c  Multiplication.h  Subtraction.c  Subtraction.h
Kernel/Operations/BigInt/: BigInt.c  BigInt.h
Kernel/Operations/Bitwise/: AND.c  AND.h  OR.c  OR.h  Shift.c  Shift.h  XOR.c  XOR.h
Kernel/Operations/Calculus/: Calculus.c  Calculus.h
Kernel/Operations/Complex/: ComplexOps.c  ComplexOps.h  ComplexTrig.c  ComplexTrig.h
Kernel/Operations/Exponential/: Exponentiation.c  Exponentiation.h  Logarithm.c  Logarithm.h
Kernel/Operations/LinearAlgebra/: LinearAlgebra.c  LinearAlgebra.h
Kernel/Operations/NumberTheory/: NumberTheory.c  NumberTheory.h
Kernel/Operations/ODE/: ODE.c  ODE.h
Kernel/Operations/RNG/: RNG.c  RNG.h
Kernel/Operations/Rational/: RationalOps.c  RationalOps.h
Kernel/Operations/Statistics/: Statistics.c  Statistics.h
Kernel/Operations/Trigonometry/: Cosine.c  Cosine.h  Sine.c  Sine.h  Tangent.c  Tangent.h
Kernel/Operations/Units/: Convert.c  Convert.h  UnitTable.h
Kernel/State/: CalculatorState.h  History.c  History.h  NumericValue.c  NumericValue.h  OperandStack.c  OperandStack.h  OperationQueue.c  OperationQueue.h  PanicHandler.c  PanicHandler.h  StateSizeCheck.h
Platform/Embedded/: esp32_buttons.c  esp32_ssd1306.c
Platform/Host/: host_input.c  host_sdl.c  host_term.c  main_host.c
Platform/Unikernel/: paravirt_serial.c
Platform/x86_64/: MSR.c  MSR.h  PortIO.c  PortIO.h
Tests/: run_qemu_test.ps1  run_qemu_test.sh
Tests/Integration/: TestPipeline.c
Tests/Performance/: BenchAddition.c  BenchBoot.c  BenchMemory.c  BenchSIMD.c  test_benchmark.c
Tests/Unit/: SamplePlugin.cpp  TestAddition.c  TestAssert.h  TestComplex.c  TestComplexDivZero.c  TestCppWrapper.cpp  TestISTCanary.c  TestPluginSystem.cpp  TestSIMD.c  TestStatsRNG.c  TestSubtraction.c  TestThreadLocalSymbols.c  TestTokenizer.c  temp_test_parse.c  test_complex_calc.c
Tools/Debug/: GDBInit.gdb  QEMU.bat  QEMU.sh
Tools/Scripts/: package_project.py
include/calc/: calc.h  calc.hpp  display.h  idt.h  input.h  memory_map.h  ui.h
include/calc/plugin/: IPlugin.hpp  PluginContext.hpp  PluginLoader.hpp  PluginManager.hpp
include/kernel/: app.h  db.h  mart_header.h  service_locator.h  wal.h  write_ahead_log.h
src/: calc.c  calc.h  calc_api.c
src/apps/: CalculatorApp.c  TetrisApp.c
src/kernel/: app_registry.c  db.c  disk_marshal.c  wal.c
